Fix return values to match Java 8 Function